manifests/base/microservices/user/user-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    name: user
  namespace: sock-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      name: user
  template:
    metadata:
      labels:
        name: user
    spec:
      containers:
        - name: user
          image: quay.io/powercloud/sock-shop-user:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8080
          command: [ "/opt/user" ]
          args: [ "-port=8080" , "-mongo-host=user-db:27017" ]
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            ###
            capabilities:
              drop:
                - all
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 3
