manifests/base/microservices/user/user-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: sock-shop
  labels:
    name: user
    monitor: "true"
spec:
  selector:
    name: user
  ports:
    - name: http
      port: 80
      targetPort: 80
