manifests/base/microservices/user/user-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: user
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: front-end
        - podSelector:
            matchLabels:
              name: orders
      ports:
        - protocol: TCP
          port: 8080
